fix chat screen div alignment

--- a/app/assets/stylesheets/app/main.scss
+++ b/app/assets/stylesheets/app/main.scss
@@ -26,7 +26,7 @@ li {
   position: fixed;
   bottom: 0px;
   right: 0px;
-  left: 220px;
+  left: 260px;
   height: 109px;
 }
 
@@ -34,7 +34,7 @@ li {
   position: fixed;
   bottom: 0px;
   right: 0px;
-  left: 220px;
+  left: 260px;
   height: 109px;
   box-sizing: border-box;
   padding: 0px 20px 8px 20px;
@@ -89,7 +89,7 @@ li {
 
 .left-gutter {
   height: 100%;
-  width: 44px;
+  min-width: 44px;
 
 }
 
