--- a/app/assets/stylesheets/app/topnav.scss
+++ b/app/assets/stylesheets/app/topnav.scss
@@ -1,7 +1,6 @@
 .topnav-bar {
   grid-area: topnav;
-  border-bottom: 1px solid silver;
-  
+  border-bottom: 1px solid #E2E2E2;
 }
 
 .left-header {
